# shadows

./: LICENSE  README.md  README.ql  pyproject.toml
scripts/: main.py  tag_game.py  tag_learn.py
scripts/games/: hunt.py  shoot.py  shooter.py  tag.py
scripts/learn/: check_env.py  enjoy.py  export_onnx_model.py  onnx_export.py  plot.py  tag_learn.py  train.py
shadows/: __init__.py  algo.py  collision.py  dqn.py  entity.py  gui.py  math.py  obstacle.py  treasure.py
shadows/hunt/: __init__.py  game.py
shadows/shoot/: __init__.py  game.py
shadows/simple/: env.py
shadows/tag/: __init__.py  env.py  game.py  not_it_env.py  policy.py  treasure.py
shoot/: __init__.py  collision.py  entity.py  env.py  gui.py  math.py  obstacle.py  taggame.py
shoot/simple/: __init__.py  env.py
shoot/tag/: __init__.py  game.py  policy.py
test/: test_collision.py
web/: README.md  index.html  package-lock.json  package.json  rollup.config.mjs
web/css/: shadows.css
web/js/: agent.js  collision.js  gui.js  math.js  obstacle.js  policy.js  shadows.js  tag.js
