[tool.poetry]
name = "shoot"
version = "0.1.0"
description = "A shooter game."
authors = ["Adam Heins <mail@adamheins.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.5.2"
numpy = "^1.23.5"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
