[tool.poetry]
name = "shadows"
version = "0.1.0"
description = "2D games with learned AI models."
authors = ["Adam Heins <mail@adamheins.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pygame = "^2.5.2"
numpy = "^1.23.5"
pyyaml = "^6.0.1"
gymnasium = "^1.0.0"
stable-baselines3 = {extras = ["extra"], version = "^2.4.0"}
sb3-contrib = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
